<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">學歷</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">設置</string>
    <string name="title_activity_addEvent">新增事件</string>
    <string name="title_activity_showEvent">事件列表</string>
    <string name="title_activity_addClass">添加課程</string>
    
    <string name="pref_category_basic">基本設置</string>
    <string name="pref_category_reminder">提醒</string>
    <string name="pref_category_readme">使用說明</string>
    <string name="pref_intent_title">說明</string>
    <string name="pref_intent_summary">點擊查看使用說明</string>
    
    <string name="date_picker_title">日期</string>
    <string name="date_picker_summary">選擇本學期的起始日期。注意：日期爲起始周的任一天。</string>
    <string name="date_picker_dialog_title">日期</string>
    <string name="date_picker_dialog_message">日期</string>
    <string name="date_picker_positiveButtonText">確定</string>
    <string name="date_picker_negativeButtonText">取消</string>
    
    <string name="time_picker_title">時間</string>
    <string name="time_picker_summary">請選擇起始時間</string>
    
    <string name="dialog_negative_button">取消</string>
    <string name="dialog_positive_button">確定</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="hello_world2">Hello world2!</string>
    
    <string name="menu_settings">設置</string>
    <string name="menu_add_event">新增事件</string>
    
    <string name="hint_title">標題</string>
    <string name="hint_content">內容</string>
    
    <string name="text_title">事情標題</string>
    <string name="text_content">事件詳情</string>
    <string name="text_add_positive">確定</string>
    
    <string name="button_show_events">學期事件</string>
    <string name="button_add_class">添加課程</string>
    
    <string name="alertdialog_title">警告</string>
    <string name="alertdialog_message">標題不能爲空</string>
    <string name="alertdialog_dismiss">關閉</string>
    <string name="toast_ok">ok</string>
    
    <string name="addClass_text">課程名稱</string>
    <string name="addClass_hint">請輸入課程名</string>
    <string name="addClass_classOrder_text">節次</string>
    <string name="addClass_weekDay_text">星期幾</string>
    <string name="addClass_text_reminder">提醒</string>
    <string name="addClass_button_ok">確定</string>
    <string name="addClass_text_classStartWeek">開始周</string>
    <string name="addClass_text_classEndWeek">結束周</string>
    <string name="addClass_alertDialog_title">提示</string>
    <string name="addClass_alertDialog_messageClassNull">課程名不能爲空</string>
    <string name="addClass_alertDialog_messageOutOfEndWeek">結束周不能小於起始周</string>
    <string name="addClass_alertDialog_dismiss">確定</string>
    
    <string name="addEvent_text_reccur">循環發生</string>
    <string name="addEvent_text_reminder">提醒</string>
    <string name="addEvent_text_startTime"> 开始時間 </string>
    <string name="addEvent_text_endTime"> 结束时间 </string>
    <string name="addEvent_alertDialog_wrongDuration_title">警告</string>
    <string name="addEvent_alertDialog_wrongDuration_message">开始时间不能少于结束时间</string>
    <string name="addEvent_alertDialog_wrongDuration_positive">确定</string>
    <string name="settings_reminder_title">提醒方式</string>
    <string name="settings_reminder_summary">設置你的日曆提醒方式</string>
    <string name="settings_reminder_dialogTitle">提醒方式</string>
    
    <string name="showDayEvent_label">当天事件</string>
    <string name="showDayEVent_deleteFinished">删除成功</string>
    
    <string name="showAllEvents_label">所有事件</string>
    
    <string name="readme_label">使用說明</string>
    <string name="readme_content_title">以下爲簡單的使用說明：</string>
    <string name="readme_content_body">
		主界面點擊「十字圖標」添加事件。\n\n
		主界面點擊「設置圖標」查看設置。\n\n
		主界面點擊「學期事件」查看由學期開始到結束的所有事件。\n\n
		主界面點擊「添加課程」添加課程。\n\n
		主界面單擊日期格子可以查看當天的事件。\n\n
		主界面长按日期格子可於所選日期添加事件。\n\n
		事件展示界面長按事件可以刪除所選事件。\n\n
		事件展示界面單擊事件可以查看事件的備註內容。\n\n
    </string>
    
    <string name="calendar_firsttime_dialog_title">提示</string>
    <string name="calendar_firsttime_dialog_message">第一次使用請設置起始日期</string>
    
</resources>
