<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
   		<TextView
   		    android:text="@string/text_title" 
   		    android:layout_height="wrap_content"
   		    android:layout_width="match_parent"
   		    android:layout_weight="3"
   		    android:gravity="center"
        	/>
    
    	<EditText 
        	android:id="@+id/edit_event_title"
        	android:layout_height="wrap_content"
        	android:layout_width="match_parent"
        	android:hint="@string/hint_title"
        	android:layout_weight="1"
        	/>
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/text_content"
            android:gravity="center"
            />
    	<EditText 
        	android:id="@+id/edit_event_content"
        	android:layout_height="wrap_content"
        	android:layout_width="match_parent"
        	android:layout_weight="1"
        	android:hint="@string/hint_content"
        	/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >
        <TextView 
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/addEvent_text_reccur"
            />
        <Spinner 
            android:id="@+id/addEvent_spinner_reccur"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/addEvent_text_reminder"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            />
        <Spinner 
            android:id="@+id/addEvent_spinner_reminder"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            />
    </LinearLayout>
    
	<TextView    
	    android:id="@+id/text_date"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="日期：2014"
        />
	
	<TextView
	    android:id="@+id/text_time"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:text="@string/addEvent_text_time" 
	    android:clickable="true"
	    android:onClick="showTimePickerDialog"
	    android:gravity="center"
	    />
	
	<Button
	    android:id="@+id/button_add_positive"
	    android:text="@string/text_add_positive"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
	</Button>
	
</LinearLayout>
